chat and dashboard / category/ home page
