# api-services/app.js
@@ -16,9 +16,11 @@ var chat = require("./routes/Chat");
 var category = require("./routes/Category");
 var brand = require("./routes/Brands");
 var image = require("./routes/Image");
+var dashboard = require("./routes/Dashboard");
 
 var app = express();
-
+var session = require('express-session');
+app.use(session({ resave: true ,secret: 'admin' , saveUninitialized: true}));
 app.use(bodyParser.json());
 app.use(bodyParser.urlencoded({ extended: false }));
 app.use(cookieParser())
@@ -38,6 +40,7 @@ app.use("/api/v1/chat", chat);
 app.use("/api/v1/category", category);
 app.use("/api/v1/brand", brand);
 app.use("/api/v1/image", image);
+app.use("/api/v1/dashboard", dashboard);
 app.use('/api/v1/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 
@@ -49,8 +52,10 @@ var publicDir = require('path').join(__dirname,'/public');
 app.use(express.static(publicDir));
 app.set('views', path.join(__dirname, './vievs'));
 app.set('view engine', 'ejs');
+
+
 app.use(function(req, res, next) {
-	res.render('admin/index.ejs') 
+	res.render('admin/login.ejs')
 });
 
 
